tests/good/misc/shortest-count.pas
program ShortestCount;

var i;
begin
    for i := 0 to 7 do
        WriteLn(i)
end.
