tests/bad/assign-to-enum.pas
program AssignToEnum;

type
    Color = (Red, Blue, Green);

begin 
    Blue := Green
end.
